Fix double border at the bottom of forms.

--- a/module/urn.uk.org.onegch.netkernel.nk4um.web/src/uk/org/onegch/netkernel/nk4um/web/style/css/main.css
+++ b/module/urn.uk.org.onegch.netkernel.nk4um.web/src/uk/org/onegch/netkernel/nk4um/web/style/css/main.css
@@ -513,7 +513,6 @@ form p {
 
 .form-footer {
   border-top: 1px solid #AAA;
-  border-bottom: 1px solid #AAA;
   background: #CCC url(images/ui-bg_highlight-soft_75_cccccc_1x100.png) repeat-x 50% 50%;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
